syntax = "proto3";

import "google/protobuf/timestamp.proto";

package author;

service AuthorService {
  rpc GetAuthorById (GetAuthorRequest) returns (AuthorResponse);
  rpc CreateAuthor (CreateAuthorRequest) returns (AuthorResponse);
  rpc UpdateAuthor (UpdateAuthorRequest) returns (AuthorResponse);
  rpc DeleteAuthor (DeleteAuthorRequest) returns (DeleteAuthorResponse);
  rpc ListAuthors (ListAuthorsRequest) returns (ListAuthorsResponse);
}

message CreateAuthorRequest {
  string name = 1;
  string email = 2;
}

message GetAuthorRequest {
  string id = 1;
}

message UpdateAuthorRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message DeleteAuthorRequest {
  string id = 1;
}

message DeleteAuthorResponse {
  bool success = 1;
}

message ListAuthorsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message AuthorResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp createdAt = 4;  
}

message ListAuthorsResponse {
  repeated AuthorResponse authors = 1;
  int32 total = 2;
}
